[package]
name = "roverse"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "http2", "stream"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal"] }
